# tamatex-proto-cost-calc

./: .gitignore  CLAUDE.md  README.md  README_QUOTE.md  findings.md  progress.md  pyproject.toml  quote_data.db  requirements.txt  setup.bat  streamlit_app.py  task_plan.md  セットアップ.bat  計画書.md  調査メモ.md
.claude/prds/: cost-calc-ui-revamp.md
.devcontainer/: devcontainer.json
.planning/2026-06-26-stationery-quote-tool/: findings.md  progress.md  task_plan.md
.streamlit/: config.toml
config/: config.example.yaml
docs/: 2026-04-07_会議要約.md  2026-04-07_会議議事録.md  system-overview.md  システム仕様書.md  導入手順書.md
docs/cost-calc/: 04-14 会議_ 品番管理システムと原価計算の課題-Summary.md  04-14 会議_ 品番管理システムと原価計算の課題-会議議事録.md  2026-04-15_原価計算プロトタイプ計画書.md  営業_原価計算（輸入）.xlsx
docs/plans/: 2026-03-26-phase1-critical-fixes.md
proto/: app.py
proto/data/: mock_gifts.py  mock_items.py  mock_params.py
proto/engine/: calc_gift.py  calc_import.py  calc_single.py  calc_summary.py  models.py  rounding.py
proto/storage/: __init__.py  scenario_repo.py  (+1 more)
quote/: app.py  app_card.py  app_table.py  import_excel.py
scripts/: build_installer.bat  clean_db_whitespace.py  generate_document_feasibility_pdf.py  generate_estimate_pdf.py  generate_pdf.py  generate_proposal_pdf.py  generate_review_report_pdf.py  initial_setup.py  installer.py
tests/: conftest.py  test_config.py  test_drive_utils.py  test_excel_reader.py  test_logger.py  test_main_delete_propagation.py  test_main_schedule.py  test_main_subfolders.py  test_nas_auth.py  test_pdf_sync.py  test_sheets_sync.py  test_state.py  test_watcher.py
(+69 files in other folders)
