[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tamatex"
version = "0.1.0"
description = "QNAP NAS Excel to Google Spreadsheet sync tool"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.25.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
tamatex = "tamatex.main:main"

[tool.setuptools.packages.find]
where = ["src"]
